--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,10 +16,14 @@
 
             <div id="centre-outside">
                 <div id="centre-inside">
-                    <div id="info-box">
-                        <div id="info-box-align">
-                            Contact Information. <br> Email: <br> lewismeakin2004@gmail.com <br> Phone: +44 7448 681 482 <br> LinkedIn: <br> https://www.linkedin.com/in/lewis-meakin-2392a3258
                     
+                    <div id="info-box">
+                        <div id="info-box-contact-info">
+                            Contact Information. <br> Email: lewismeakin2004@gmail.com <br> Phone: +44 7448 681 482
+                        </div>
+
+                        <div id="info-box-blank">
+
                         </div>
                     </div>
 
