--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -31,7 +31,7 @@
                             </div>
                             <div id="about-right-middle">
                                 <div id="about-info">
-                                    I am a third year Computer Science at Coventry University. I have experience in several different coding languages
+                                    I am a Graduate Computer Science at Coventry University. I have experience in several different coding languages
                                     such as Python, C++, and JavaScript; however I do not struggle with learning new syntax and ultimately enjoy discovering
                                     the quirks and niche applications that come with with different languages. I enjoy problem solving and the porcess that 
                                     comes with designing, implementing, and optomising projects. I have applied my skills through several mediums: game design,
