--- a/templates/projects.html
+++ b/templates/projects.html
@@ -74,13 +74,13 @@
                             
 
                             <div class="project-description">
-                                Kickstarted by a Kaggle Dataset, this project focuses on using various Python Libraries alongside Jupyter Notebook to Analyse, Visualise and Model various attriubutes of the first 807 Pokemon.
+                                Kickstarted by a Kaggle Dataset, this project focuses on using various Python Libraries alongside Jupyter Notebook to Analyse, Visualise and Model the attriubutes of the first 807 Pokemon.
                             </div>
 
 
                             <div class="project-skills"> 
                                 <div class="project-skill-tag">Python</div>
-                                <div class="project-skill-tag">Jupyter</div>
+                                <div class="project-skill-tag">Jupyter Notebook</div>
                                 <div class="project-skill-tag">Data Analysis</div>
                                 <div class="project-skill-tag">Data Visualisation</div>
                                 <div class="project-skill-tag">Data Modelling</div>
