05/10/25 Tweaked Project Image Blur Added Project Completion Dates to Project Widgets Altered GitHub Link to be in a footer so that completetion dates can also be pushed to the bottome.

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -55,12 +55,16 @@
                                 <div class="project-skill-tag">Web Development</div>
                             </div>                    
                             
-                            <a class="project-github-link" href="https://github.com/Meakinl2/Personal-Website">
-                                    GitHub 
-                            </a>
+                            <div class="project-footer">
+                                <div class="project-completion-date">
+                                    Completeion Date: Ongoing
+                                </div>
+
+                                <div class="project-github-link" >
+                                    <a href="https://github.com/Meakinl2/Personal-Website"> GitHub </a>  
+                                </div>
+                            </div>
                         </div>
-
-
 
                         <div class="project-container">
                             <div class="project-image">
@@ -70,8 +74,6 @@
                             <div class="project-title">
                                 Pokemon Data Analysis 
                             </div>
-
-                            
 
                             <div class="project-description">
                                 Kickstarted by a Kaggle Dataset, this project focuses on using various Python Libraries alongside Jupyter Notebook to Analyse, Visualise and Model the attriubutes of the first 807 Pokemon.
@@ -86,10 +88,15 @@
                                 <div class="project-skill-tag">Data Modelling</div>
                             </div>
                             
+                            <div class="project-footer">
+                                <div class="project-completion-date">
+                                    Completeion Date: Ongoing
+                                </div>
 
-                            <a class="project-github-link" href="https://github.com/Meakinl2/Pokemon-Data-Analysis">
-                                    GitHub 
-                            </a>
+                                <div class="project-github-link" >
+                                    <a href="https://github.com/Meakinl2/Pokemon-Data-Analysis"> GitHub </a>  
+                                </div>
+                            </div>
 
                         </div>
 
@@ -115,12 +122,6 @@
                             e 
 
 
-                        </div>
-
-                    
-
-                        <div class="project-container">
-                            f
                         </div>
 
                     </div>
