--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -66,7 +66,7 @@ div.project-container {
     flex-direction: column;
     
     width: 29dvw;
-    aspect-ratio: 10/11;
+    aspect-ratio: 5/7;
     
     margin: 0.5dvw;
     
@@ -100,7 +100,7 @@ div.project-image img {
     aspect-ratio: 16/9;
     object-fit: cover;
 
-    filter: blur(0.1dvw) brightness(0.95);
+    filter: blur(0.15dvw) brightness(0.95);
     border-radius: 10px 10px 0px 0px;
     
 }
@@ -114,10 +114,9 @@ div.project-image-cover {
 
 div.project-description {
     margin: 1dvw;
-    
 
     text-align: left;
-    font-size: 1.5dvw;
+    font-size: 1.2dvw;
 
     overflow-wrap: break-word;
     overflow: hidden;
@@ -128,16 +127,15 @@ div.project-skills {
     display: inline-flex;
     flex-wrap: wrap;
 
-    width: 96%;
-    padding: 2%;
+    width: 28dvw;
+    padding: 0.5dvw;
 
     overflow: hidden;
 }
 
 div.project-skill-tag {
-    
-    margin: 0.2vw;
-    padding: 0.4dvw;
+    margin: 0.2dvw;
+    padding: 0.4dvh 0.4dvw 0.4dvh 0.4dvw;
 
     background-color: #65569963;
     border-radius: 0.5dvw;
@@ -145,13 +143,31 @@ div.project-skill-tag {
     font-size: 1dvw;
 }
 
-
-a.project-github-link {
-    width:100%;
+div.project-footer {
+    width: 29dvw;
+    height: 7dvh;
 
     margin-top: auto;
+    align-self: flex-end;
+}
+
+div.project-completion-date {
+    height: 3dvh;
+    
+    font-size: 1.5dvw;
+    
+}
+
+div.project-github-link {
+    align-content: center;
+
+    width: 29dvw;
+    height: 4dvh;
     
     background-color: #2b3137ab;
     border-radius: 0px 0px 10px 10px;
 }
 
+div.project-github-link a {
+    text-decoration: none;
+}
