--- a/templates/projects.html
+++ b/templates/projects.html
@@ -67,6 +67,7 @@
                         </div>
 
                         <div class="project-container">
+
                             <div class="project-image">
                                 <img src="{{url_for('static',filename='images/Project-Images/pokemon_data_analysis.png')}}">
                             </div>
@@ -103,7 +104,40 @@
 
 
                         <div class="project-container">
-                            c
+                            
+                             <div class="project-image">
+                                <img src="{{url_for('static',filename='images/Project-Images/greenflow.png')}}">
+                            </div>
+
+                            <div class="project-title">
+                                GreenFlow - Dissertation
+                            </div>
+
+                            <div class="project-description">
+                                GreenFlow is a Traffic Flow Simulator created in Unity Game Engine. Utilising Multithreading and Bezier Curves, Greenflow offers a Customisable and Scalable Traffic Simulation Experience.
+                                <br> <br>
+                                Throughout development performance metrics were rigorously gathered and visualised using Python Libraries to direct efforts to the most performance friendly solution.
+                            </div>
+
+
+                            <div class="project-skills"> 
+                                <div class="project-skill-tag">Unity Game Engine</div>
+                                <div class="project-skill-tag">Parallel Programming</div>
+                                <div class="project-skill-tag">C#</div>
+                                <div class="project-skill-tag">Python</div>
+                                <div class="project-skill-tag">Data Collection</div>
+                                <div class="project-skill-tag">Data Visualisation</div>
+                            </div>
+                            
+                            <div class="project-footer">
+                                <div class="project-completion-date">
+                                    Completetion Date: April 2025
+                                </div>
+
+                                <div class="project-github-link" >
+                                    <a href="https://github.com/Meakinl2/6001CEM-Individual-Project"> GitHub </a>  
+                                </div>
+                            </div>
 
 
                         </div>
@@ -111,7 +145,7 @@
 
 
                         <div class="project-container">
-                            d
+                            d 
 
 
                         </div>
@@ -121,6 +155,39 @@
                         <div class="project-container">
                             e 
 
+
+                        </div>
+
+
+
+                         <div class="project-container" style="visibility: hidden;">
+
+                             <div class="project-image">
+                                <img src="{{url_for('static',filename='images/Project-Images/placeholder.png')}}">
+                            </div>
+
+                            <div class="project-title">
+                                Title
+                            </div>
+
+                            <div class="project-description">
+                                Description
+                            </div>
+
+
+                            <div class="project-skills"> 
+                                <div class="project-skill-tag">Skill</div>
+                            </div>
+                            
+                            <div class="project-footer">
+                                <div class="project-completion-date">
+                                    Completetion Date: Ongoing
+                                </div>
+
+                                <div class="project-github-link" >
+                                    <a href=""> GitHub </a>  
+                                </div>
+                            </div>
 
                         </div>
 
