--- a/templates/projects.html
+++ b/templates/projects.html
@@ -57,7 +57,7 @@
                             
                             <div class="project-footer">
                                 <div class="project-completion-date">
-                                    Completeion Date: Ongoing
+                                    Completion Date: Ongoing
                                 </div>
 
                                 <div class="project-github-link" >
@@ -91,7 +91,7 @@
                             
                             <div class="project-footer">
                                 <div class="project-completion-date">
-                                    Completeion Date: Ongoing
+                                    Completion Date: Ongoing
                                 </div>
 
                                 <div class="project-github-link" >
@@ -131,11 +131,11 @@
                             
                             <div class="project-footer">
                                 <div class="project-completion-date">
-                                    Completetion Date: April 2025
+                                    Completion Date: April 2025
                                 </div>
 
                                 <div class="project-github-link" >
-                                    <a href="https://github.com/Meakinl2/6001CEM-Individual-Project"> GitHub </a>  
+                                    <a href="https://github.com/Meakinl2/GreenFlow"> GitHub </a>  
                                 </div>
                             </div>
 
