06/10/25 Reworked Homepage to use viewport height instead of percentages. Redesigned Hompage slightly to better fit on the screen, though still lacking key elements. Reworded About Me section, though possibly needs trimming down.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -25,23 +25,21 @@
                     </div>
 
                     <div id="about-right">
-                        <div id="about-right-inside">
-                            <div id="about-right-top">
-                                Hello, I'm Lewis Meakin.
-                            </div>
-                            <div id="about-right-middle">
-                                <div id="about-info">
-                                    I am a Graduate Computer Science at Coventry University. I have experience in several different coding languages
-                                    such as Python, C++, and JavaScript; however I do not struggle with learning new syntax and ultimately enjoy discovering
-                                    the quirks and niche applications that come with with different languages. I enjoy problem solving and the porcess that 
-                                    comes with designing, implementing, and optomising projects. I have applied my skills through several mediums: game design,
-                                    web development, application development, ect. While I thrive the best as an idividual I am not adverse to teamwork and can
-                                    prove myself a consistently useful member provided I am given adequate direction.
-                                </div>
-                            </div>
-                            <div id="about-right-bottom">
-                                <!-- <img src="{{url_for('static',filename='images/linkedin.png')}}"> -->
-                            </div>
+                        <div id="about-title">
+                            Hello, I'm Lewis Meakin.
+                        </div>
+                        <div id="about-info">
+                            Having Graduated from Coventry University with Bachelors of Computer, I possess experience and knowledge with an array of coding languages and concepts.
+                            Starting with Python back in 2020 I have experimented with several different programming languages including: C#, C++, and JavaScript.
+                            Though I also have in depth experience with markdown languages such as HTML and CSS, alongside the database managment language SQL.
+                            <br> <br>
+                            Over the course of my education I have put these skills to use in a vast range of fields such as Full-Stack Web Development, Data Analysis and Modelling, and Software Design. 
+                            These pursuits have built on top of my already strong desire to solve problems to leave me with a wide set of strong skills which I employ to investigate and rectify problems.
+                            While I enjoy the feeling that comes with creating something from scratch I mostly find myself drawn to the problem-solving aspect of Computer Science, finding that thinking creatively to overcome a problem is the ultimate reward itself.
+                        </div>
+
+                        <div id="about-links">
+                            
                         </div>
                     </div>
                     
