--- a/templates/projects.html
+++ b/templates/projects.html
@@ -77,7 +77,7 @@
                             </div>
 
                             <div class="project-description">
-                                Kickstarted by a Kaggle Dataset, this project focuses on using various Python Libraries alongside Jupyter Notebook to Analyse, Visualise and Model the attriubutes of the first 807 Pokemon.
+                                Kickstarted by a Kaggle Dataset, this project focuses on using various Python Libraries alongside Jupyter Notebook to Analyse, Visualise and Model the attributes of the first 807 Pokemon.
                             </div>
 
 
@@ -116,7 +116,7 @@
                             <div class="project-description">
                                 GreenFlow is a Traffic Flow Simulator created in Unity Game Engine. Utilising Multithreading and Bezier Curves, Greenflow offers a Customisable and Scalable Traffic Simulation Experience.
                                 <br> <br>
-                                Throughout development performance metrics were rigorously gathered and visualised using Python Libraries to direct efforts to the most performance friendly solution.
+                                Throughout Development, Performance Metrics were rigorously Gathered and Visualised using Python Libraries to direct efforts towards the most performance friendly solution.
                             </div>
 
 
@@ -139,7 +139,6 @@
                                 </div>
                             </div>
 
-
                         </div>
 
 
@@ -160,9 +159,9 @@
 
 
 
-                         <div class="project-container" style="visibility: hidden;">
+                        <div class="project-container" style="visibility: hidden;">
 
-                             <div class="project-image">
+                            <div class="project-image">
                                 <img src="{{url_for('static',filename='images/Project-Images/placeholder.png')}}">
                             </div>
 
