--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -38,7 +38,7 @@
                             While I enjoy the feeling that comes with creating something from scratch I mostly find myself drawn to the problem-solving aspect of Computer Science, finding that thinking creatively to overcome a problem is the ultimate reward itself.
                         </div>
 
-                        <div id="about-links">
+                        <div id="about-links-bar">
                             
                         </div>
                     </div>
