--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,6 +1,6 @@
 /* Top of Page Navbar */
 div#navbar {
-    height:50px;
+    height:5dvh;
     text-align:center;
     background: rgba(0,0,0,0);;
 }
@@ -8,8 +8,10 @@ div#navbar {
 ul {
     list-style-type:None;
     display:inline-block;
+
     margin:0;
     padding:0;
+    
     overflow:hidden;
 }
 
@@ -19,15 +21,17 @@ li {
 
 li a {
     display:inline-block;
+    
     padding:14px 16px;
+    
     color:white;
-    font-size:19px;
+    font-size:3dvh;
     text-align:center;
     text-decoration:none;
 }
 
 li a:hover {
-    background: rgba(0,0,0,0.2);
+    background: rgba(0,0,0,0.3);
 }
 
 div#seperation {
