07/10/25 Added Certifications Page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,6 +3,7 @@
 
     <head>
         <title> Contact </title>
+        <link rel="icon" href="{{url_for('static', filename='images/favicons/felix-512x512.png')}}">
         <link rel="stylesheet" href="{{url_for('static',filename='css/generic.css')}}">
         <link rel="stylesheet" href="{{url_for('static',filename='css/contact.css')}}">
     </head>
