--- a/templates/experience.html
+++ b/templates/experience.html
@@ -3,6 +3,7 @@
 
     <head>
         <title> Experience </title>
+        <link rel="icon" href="{{url_for('static', filename='images/favicons/felix-512x512.png')}}">
         <link rel="stylesheet" href="{{url_for('static',filename='css/generic.css')}}">
         <link rel="stylesheet" href="{{url_for('static',filename='css/experience.css')}}">
     </head>
@@ -14,6 +15,13 @@
                 {% include "navbar.html" %}
             </div>
         
+            <div id="center-outside">
+                <div id="centre-inside">
+
+
+
+                </div>
+            </div>
         </div>
             
     </body>
