--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,8 +4,8 @@
     <ul>
         <li><a href="/"> Home </a></li>
         <li><a href="/experience"> Experience </a></li>
+        <li><a href="/certifications"> Certifications </a></li>
         <li><a href="/projects"> Projects </a></li>
-        <li><a href="/playground"> Playground </a></li>
         <li><a href="/contact"> Contact </a></li>
     </ul>
 </div>
