--- a/templates/playground.html
+++ b/templates/playground.html
@@ -3,6 +3,7 @@
 
     <head>
         <title> HTML Playground </title>
+        <link rel="icon" href="{{url_for('static', filename='images/favicons/felix-512x512.png')}}">
         <link rel="stylesheet" href="{{url_for('static',filename='css/playground.css')}}">       
     </head>
 
