09/10/25 Added Komodo Hub Group Project to Projects Page.

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -144,7 +144,42 @@
 
 
                         <div class="project-container">
-                            d 
+                            
+                             <div class="project-image">
+                                <img src="{{url_for('static',filename='images/Project-Images/komodo-hub.png')}}">
+                            </div>
+
+                            <div class="project-title">
+                                Komodo Hub
+                            </div>
+
+                            <div class="project-description">
+                                Komodo Hub is a website dedicated to the conservation of Wildlife and their Habitiats on the island of Java in Indonesia.  <br> <br>
+                                Spanning three months the focus was on working as a small team using Agile Methodology to create the website from scratch.
+                                Featuring a full SQL database, Account Creation, and Basic Data Encryption the site covers a range of topics and skills besides just HTML and CSS
+                            </div>
+
+
+                            <div class="project-skills"> 
+                                <div class="project-skill-tag">SQL</div>
+                                <div class="project-skill-tag">HTML3</div>
+                                <div class="project-skill-tag">CS5</div>
+                                <div class="project-skill-tag">Agile Methodology</div>
+                                <div class="project-skill-tag">Teamwork</div>
+                                <div class="project-skill-tag">Web Develeopment</div>
+                                <div class="project-skill-tag">Database Creation</div>
+                                <div class="project-skill-tag">Secure Design</div>
+                            </div>
+                            
+                            <div class="project-footer">
+                                <div class="project-completion-date">
+                                    Completetion Date: November 2023
+                                </div>
+
+                                <div class="project-github-link" >
+                                    <a href=""> GitHub </a>  
+                                </div>
+                            </div>
 
 
                         </div>
