--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,8 +19,18 @@
                 <div id="centre-inside">
                     
                     <div id="info-box">
-                        <div id="info-box-contact-info">
-                            Contact Information. <br> Email: lewismeakin2004@gmail.com <br> Phone: +44 7448 681 482
+                        <div id="contact-info">
+                            <div id="contact-info-title">
+                                Contact Information.
+                            </div>
+
+                            <div id="contact-info-email">
+                                Email: lewismeakin2004@gmail.com 
+                            </div>
+
+                            <div id="contact-info-phone">
+                                Phone: +44 7448 681 482
+                            </div>
                         </div>
 
                         <div id="info-box-blank">
@@ -32,20 +42,24 @@
                         <form>
                             <div id="name-box">
                                 <div id="first-name-input">
-                                    <input type="text" name="first-name" class="form-input" placeholder="First Name" required/>
+                                    <label for="first-name-input">First Name:</label>
+                                    <input type="text" id="first-name-input" name="first-name" class="form-input" placeholder="First Name" required/>
                                 </div>
 
                                 <div id="last-name-input">
-                                    <input type="text" name="last-name" class="form-input" placeholder="Last Name" required/>
+                                    <label for="last-name-input">Last Name:</label>
+                                    <input type="text" id="last-name-input" name="last-name" class="form-input" placeholder="Last Name" required/>
                                 </div>
                             </div>
                             
                             <div id="email-input">
-                                <input type="text" name="email" class="form-input" placeholder="Email Address" required/>
+                                <label for="email-input">Email Address:</label>
+                                <input type="text" id="email-input" name="email" class="form-input" placeholder="Email Address" required/>
                             </div>
 
                             <div id="message-input">
-                                <textarea id="message-box" name="message" placeholder="Message"> </textarea> 
+                                <label for="message">Message:</label>
+                                <textarea id="message-box" id="message-input" name="message" placeholder="Message"></textarea> 
                             </div>
 
                             <input type="submit" name="submit-button" class="submit-button" value="Submit"/>
