10/10/25 Updated Project Descriptions to be more detailed.

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -44,7 +44,9 @@
                             </div>
                             
                             <div class="project-description">
-                                Hosted using Python Flask, this website was created from the ground up with custom HTML, CSS, and JavaScript.
+                                Serving as a primary location document and showcase my experiece and skills, this website is built from the ground up by me.
+                                <br> <br>
+                                Hosted using Flask in Python, this website runs custom made HTML, CSS, and Java to create an environment I can be proud of.
                             </div>
 
                             <div class="project-skills"> 
@@ -78,6 +80,8 @@
 
                             <div class="project-description">
                                 Kickstarted by a Kaggle Dataset, this project focuses on using various Python Libraries alongside Jupyter Notebook to Analyse, Visualise and Model the attributes of the first 807 Pokemon.
+                                <br> <br>
+                                Using Pandas to Read, Manipulate, and Clean the data before it can be displayed neatly using matplotlib and modelled using the various options provided by scipy.
                             </div>
 
 
