--- a/templates/projects.html
+++ b/templates/projects.html
@@ -181,10 +181,9 @@
                                 </div>
 
                                 <div class="project-github-link" >
-                                    <a href=""> GitHub </a>  
+                                    <a href="https://github.com/Meakinl2/Ocean-Gate"> GitHub </a>  
                                 </div>
                             </div>
-
 
                         </div>
 
